@@ -506,6 +506,23 @@ name|HiveMetaStoreClient
 parameter_list|(
 name|HiveConf
 name|conf
+parameter_list|)
+throws|throws
+name|MetaException
+block|{
+name|this
+argument_list|(
+name|conf
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|HiveMetaStoreClient
+parameter_list|(
+name|HiveConf
+name|conf
 parameter_list|,
 name|HiveMetaHookLoader
 name|hookLoader
